--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - group
     - node
+    - portland
     - user
 id: group_content_menu
 label: 'Group content menu'
@@ -314,9 +315,8 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_label
-          settings:
-            link: false
+          type: portland_plural_label
+          settings: {  }
           group_column: target_id
           group_columns: {  }
           group_rows: true
