POWR-238a required and enabled simplesamlphp_auth module

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -38,6 +38,7 @@ module:
   entity_embed: 0
   entity_reference: 0
   entity_reference_revisions: 0
+  externalauth: 0
   facets: 0
   field: 0
   field_ui: 0
@@ -105,6 +106,7 @@ module:
   shortcut: 0
   simple_oauth: 0
   simple_oauth_extras: 0
+  simplesamlphp_auth: 0
   swiftype_integration: 0
   system: 0
   taxonomy: 0
