--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -130,3 +130,5 @@ maxlength: 1.0.0-beta2
 telephone_validation: 2.1.0
 cleave: 0.1.0
 automated_cron: 0.0.0
+externalauth: 1.1.0
+simplesamlphp_auth: 3.0.0
