--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
+        "drupal/simplesamlphp_auth": "^3.0",
         "drupal/swiftype": "^1.0",
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
