POWR-90 initial commit of columns and new paragraphs approach

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -49,15 +49,21 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_service_mode:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 6
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: preview
-      add_mode: button
+      title: 'service mode'
+      title_plural: 'service modes'
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
       default_paragraph_type: service_mode
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
     third_party_settings: {  }
     region: content
   field_summary:
