--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -27,14 +27,20 @@ content:
   field_body:
     weight: 3
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      title: Slice
+      title_plural: Slices
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: simple_text
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
     third_party_settings: {  }
-    type: entity_reference_paragraphs
+    type: paragraphs
     region: content
   field_related_content:
     weight: 4
