--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -21,15 +21,21 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_body:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 1
     settings:
-      title: content
-      title_plural: content
-      edit_mode: preview
-      add_mode: button
+      title: slice
+      title_plural: slices
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
       default_paragraph_type: simple_text
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
     third_party_settings: {  }
     region: content
   moderation_state:
