--- a/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
@@ -21,15 +21,21 @@ content:
     type: chosen_select
     region: content
   field_step_by_step_instructions:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 2
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: preview
-      add_mode: button
+      title: step
+      title_plural: steps
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
       default_paragraph_type: service_step
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
     third_party_settings: {  }
     region: content
 hidden:
