--- a/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
@@ -16,15 +16,21 @@ bundle: service_step
 mode: default
 content:
   field_step_action_button:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 2
     settings:
-      title: Action
-      title_plural: Actions
-      edit_mode: open
-      add_mode: button
+      title: button
+      title_plural: buttons
+      edit_mode: closed
+      closed_mode: preview
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
       default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
     third_party_settings: {  }
     region: content
   field_step_instruction:
