--- a/web/sites/default/config/editor.editor.simple_editor.yml
+++ b/web/sites/default/config/editor.editor.simple_editor.yml
@@ -34,6 +34,13 @@ settings:
           name: Tools
           items:
             - HorizontalRule
+            - SpecialChar
+            - Superscript
+            - Subscript
+            - Strike
+            - RemoveFormat
+            - PasteFromWord
+            - PasteText
   plugins:
     stylescombo:
       styles: ''
