--- a/web/sites/default/config/field.field.node.city_service.field_service_mode.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_service_mode.yml
@@ -39,13 +39,22 @@ settings:
       service_mode:
         enabled: true
         weight: 9
+      columns_equal:
+        weight: 10
+        enabled: false
       service_step:
         weight: 10
         enabled: false
       simple_text:
         weight: 11
         enabled: false
+      fax_button:
+        weight: 12
+        enabled: false
       telephone_button:
         weight: 12
+        enabled: false
+      location:
+        weight: 14
         enabled: false
 field_type: entity_reference_revisions
