--- a/web/sites/default/config/field.field.node.information.field_body.yml
+++ b/web/sites/default/config/field.field.node.information.field_body.yml
@@ -5,7 +5,13 @@ dependencies:
   config:
     - field.storage.node.field_body
     - node.type.information
+    - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.email_button
+    - paragraphs.paragraphs_type.fax_button
+    - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.telephone_button
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -29,29 +35,38 @@ settings:
     negate: 0
     target_bundles:
       simple_text: simple_text
+      columns_equal: columns_equal
+      form_app_button: form_app_button
+      email_button: email_button
+      telephone_button: telephone_button
+      fax_button: fax_button
+      location: location
     target_bundles_drag_drop:
-      email_button:
-        weight: 10
-        enabled: false
-      fax_button:
-        weight: 10
-        enabled: false
-      form_app_button:
-        weight: 11
-        enabled: false
-      location:
-        weight: 12
-        enabled: false
-      service_mode:
-        weight: 13
-        enabled: false
-      service_step:
-        weight: 14
-        enabled: false
       simple_text:
         enabled: true
-        weight: 15
+        weight: -19
+      columns_equal:
+        enabled: true
+        weight: -18
+      form_app_button:
+        enabled: true
+        weight: -17
+      email_button:
+        enabled: true
+        weight: -16
       telephone_button:
-        weight: 16
+        enabled: true
+        weight: -15
+      fax_button:
+        enabled: true
+        weight: -14
+      location:
+        enabled: true
+        weight: -13
+      service_mode:
+        weight: -12
+        enabled: false
+      service_step:
+        weight: -11
         enabled: false
 field_type: entity_reference_revisions
