--- a/web/sites/default/config/paragraphs.paragraphs_type.form_app_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.form_app_button.yml
@@ -1,9 +1,11 @@
 uuid: b80cd2a2-8f64-42b5-ad52-6900ccf14d93
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:d6b80f61-4cb2-4cde-93c8-a3391062a3cf'
 id: form_app_button
 label: 'Form/App Button'
-icon_uuid: null
+icon_uuid: d6b80f61-4cb2-4cde-93c8-a3391062a3cf
 description: 'Button for adding a form or application button'
 behavior_plugins: {  }
