--- a/web/sites/default/config/paragraphs.paragraphs_type.location.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.location.yml
@@ -1,9 +1,11 @@
 uuid: 97e68fea-6f9f-4bd0-b095-4245acb2f7fa
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:6c5526e5-e520-4964-971f-23f7a10a2b8b'
 id: location
 label: Location
-icon_uuid: null
-description: ''
+icon_uuid: 6c5526e5-e520-4964-971f-23f7a10a2b8b
+description: 'Add a service location with a link to get directions'
 behavior_plugins: {  }
