--- a/web/sites/default/config/paragraphs.paragraphs_type.simple_text.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.simple_text.yml
@@ -1,9 +1,11 @@
 uuid: dcb3433b-50ad-4bd0-a838-fdd575ad4c1e
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:0113e6b2-7541-4d72-9397-784310607a5f'
 id: simple_text
 label: Text
-icon_uuid: null
+icon_uuid: 0113e6b2-7541-4d72-9397-784310607a5f
 description: 'Simple paragraph of text with a rich text editor with limited formatting capabilities.'
 behavior_plugins: {  }
