--- a/web/sites/default/config/paragraphs.paragraphs_type.telephone_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.telephone_button.yml
@@ -1,9 +1,11 @@
 uuid: 36fd8da4-7bdd-4747-bea1-7b8a68cb9cb1
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:c5aa54a6-8325-43fc-b335-8ac95a35fc0f'
 id: telephone_button
 label: 'Telephone Button'
-icon_uuid: null
-description: ''
+icon_uuid: c5aa54a6-8325-43fc-b335-8ac95a35fc0f
+description: 'Add a button that will dial a phone number if clicked on mobile device.'
 behavior_plugins: {  }
