--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/address": "^1.3",
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
+        "drupal/allowed_formats": "^1.1",
         "drupal/bootstrap_layouts": "^5.1",
         "drupal/bootstrap_library": "^1.11",
         "drupal/bootstrap_paragraphs": "^2.0@beta",
