--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_instruction.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_instruction.yml
@@ -6,9 +6,14 @@ dependencies:
     - field.storage.paragraph.field_step_instruction
     - paragraphs.paragraphs_type.service_step
   module:
+    - allowed_formats
     - custom_add_another
     - text
 third_party_settings:
+  allowed_formats:
+    simple_editor: simple_editor
+    rich_text: '0'
+    plain_text: '0'
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
