--- a/web/sites/default/config/paragraphs.paragraphs_type.email_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.email_button.yml
@@ -1,9 +1,11 @@
 uuid: bfd1a3ea-9f29-41b4-a0ad-2bbc4bd8bf03
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:fa48b290-df8f-4586-84ae-0123e74bbf9a'
 id: email_button
 label: 'Email Button'
-icon_uuid: null
-description: ''
+icon_uuid: fa48b290-df8f-4586-84ae-0123e74bbf9a
+description: 'Add a button that links to an email address.'
 behavior_plugins: {  }
