--- a/web/sites/default/config/paragraphs.paragraphs_type.fax_button.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.fax_button.yml
@@ -1,9 +1,11 @@
 uuid: 8dde1a22-dcde-4d3d-9a3a-cd3f3883278c
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:0933a59c-f71c-4153-aaea-37d7549d85bd'
 id: fax_button
 label: 'Fax Button'
-icon_uuid: null
-description: ''
+icon_uuid: 0933a59c-f71c-4153-aaea-37d7549d85bd
+description: 'Add a button that shows a fax number'
 behavior_plugins: {  }
