--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -19,6 +19,7 @@ permissions:
   - 'use editorial transition create_new_draft'
   - 'use editorial transition publish'
   - 'use editorial transition review'
+  - 'use text format simple_editor'
   - 'view latest version'
   - 'view media'
   - 'view own unpublished content'
