--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.field_body
+    - field.field.node.news.field_summary_and_lead_paragraph
     - node.type.news
   module:
     - panelizer
@@ -19,7 +20,15 @@ id: node.news.teaser
 targetEntityType: node
 bundle: news
 mode: teaser
-content: {  }
+content:
+  field_summary_and_lead_paragraph:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_body: true
