POWR-90 POWR-254 fix the categories view.

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block.yml
@@ -22,11 +22,15 @@ settings:
   label_display: visible
   views_label: ''
   items_per_page: none
+  context_mapping: {  }
 visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
       city_service: city_service
+      guide: guide
+      information: information
+      news: news
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
