--- a/web/sites/default/config/views.view.categories_on_a_node.yml
+++ b/web/sites/default/config/views.view.categories_on_a_node.yml
@@ -198,6 +198,7 @@ display:
     display_options:
       display_extenders: {  }
       block_description: 'Categories on a node'
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
