POWR-89 Add alert content type

--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -83,6 +83,7 @@ display:
               information: default
               news: default
               guide: default
+              alert: default
       fields:
         rendered:
           table: search_api_index_content
