--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - node.type.alert
     - node.type.building
     - node.type.city_service
     - node.type.guide
@@ -68,6 +69,7 @@ type_settings:
         - published
   entity_types:
     node:
+      - alert
       - building
       - city_service
       - guide
