--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -28,6 +28,7 @@ field_settings:
           service_location: default
           information: default
           guide: default
+          alert: default
   label:
     label: Label
     property_path: aggregated_field
