POWR-245 Update theme library filenames

--- a/web/themes/custom/rain/rain.libraries.yml
+++ b/web/themes/custom/rain/rain.libraries.yml
@@ -1,6 +1,6 @@
 global:
   css:
     theme:
-      source/css/style.css: {}
+      source/css/style.bundle.css: {}
   js:
-    source/js/main.js: {}
+    source/js/main.bundle.js: {}
