--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
+        "drupal/simplesamlphp_auth": "^3.0",
         "drupal/swiftype": "^1.0",
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
@@ -68,6 +69,7 @@
         "drupal/views_bulk_operations": "^2.2",
         "drush/drush": "^9.0.0",
         "roave/security-advisories": "dev-master",
+        "simplesamlphp/simplesamlphp": "^1.15",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4"
