POWR-245 Add webpack source maps output to theme

--- a/web/themes/custom/rain/rain.libraries.yml
+++ b/web/themes/custom/rain/rain.libraries.yml
@@ -1,6 +1,6 @@
 global:
   css:
     theme:
-      source/css/style.bundle.css: {}
+      source/css/styles.bundle.css: {}
   js:
     source/js/main.bundle.js: {}
