--- a/web/sites/default/config/system.theme.yml
+++ b/web/sites/default/config/system.theme.yml
@@ -1,4 +1,5 @@
 admin: adminimal_theme
-default: rain
+default: stormy
 _core:
   default_config_hash: 6lQ55NXM9ysybMQ6NzJj4dtiQ1dAkOYxdDompa-r_kk
+defualt: stormy
