POWR-89 Move alerts back to highlights region. Add dismissal button.

--- a/web/sites/default/config/field.storage.node.field_severity.yml
+++ b/web/sites/default/config/field.storage.node.field_severity.yml
@@ -12,13 +12,13 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: danger
+      value: '10'
       label: Danger
     -
-      value: warning
+      value: '20'
       label: Warning
     -
-      value: info
+      value: '30'
       label: Information
   allowed_values_function: ''
 module: options
