--- a/web/sites/default/config/block.block.views_block__alerts_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__alerts_block_1.yml
@@ -10,7 +10,7 @@ dependencies:
     - stormy
 id: views_block__alerts_block_1
 theme: stormy
-region: alerts
+region: highlighted
 weight: -11
 provider: null
 plugin: 'views_block:alerts-block_1'
