--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - field.storage.node.field_severity
     - node.type.alert
+    - workflows.workflow.editorial
   module:
+    - content_moderation
     - node
     - options
     - user
@@ -375,17 +377,6 @@ display:
           field_api_classes: false
           plugin_id: field
       filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
         type:
           id: type
           table: node_field_data
@@ -395,6 +386,46 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+          group: 1
+        moderation_state:
+          id: moderation_state
+          table: node_field_data
+          field: moderation_state
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            editorial-published: editorial-published
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          plugin_id: moderation_state_filter
       sorts:
         field_severity_value:
           id: field_severity_value
@@ -430,6 +461,10 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
@@ -439,6 +474,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_severity'
+        - 'config:workflow_list'
   block_1:
     display_plugin: block
     id: block_1
@@ -455,3 +491,4 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_severity'
+        - 'config:workflow_list'
