POWR-89 Update summary in Alert form display. Add summary in header.

--- a/web/sites/default/config/field.field.node.alert.field_summary.yml
+++ b/web/sites/default/config/field.field.node.alert.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: node
 bundle: alert
 label: Summary
-description: ''
+description: 'Brief description for the alert.'
 required: true
 translatable: true
 default_value: {  }
