--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -325,7 +325,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_node }}" id="{{ nid }}" data-nid="{{ nid }}" data-changed="{{ changed }}">{{ title }} </a>'
+            text: '<span id="{{ nid }}" data-nid="{{ nid }}" data-changed="{{ changed }}">{{ title }} </span>'
             make_link: false
             path: ''
             absolute: false
