POWR-238 Moved simplesaml config files out of vendor directory, added composer post-update commands to create symlink to config folder at web/private/simplesamlphp/config.

--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,11 @@
         "sort-packages": true
     },
     "scripts": {
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+        "post-update-cmd": [
+            "rmdir ./vendor/simplesamlphp/simplesamlphp/config",
+            "ln -s ../../../web/private/simplesamlphp/config ./vendor/simplesamlphp/simplesamlphp"
+        ]
     },
     "extra": {
         "_readme": [
