POWR-233 Added image field to hold logo for groups Added to bureau, elected official, and program group types

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -4,13 +4,16 @@ status: true
 dependencies:
   config:
     - field.field.group.bureau_office.field_audience
+    - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
+    - image.style.thumbnail
   module:
     - chosen_field
+    - image
     - maxlength
 id: group.bureau_office.default
 targetEntityType: group
@@ -23,6 +26,19 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_logo:
+    type: entity_browser_file
+    weight: 6
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_official_organization_name:
     weight: 1
     settings:
