--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -4,11 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.group.elected_official.field_bureaus
+    - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
+    - image.style.thumbnail
   module:
+    - image
     - maxlength
 id: group.elected_official.default
 targetEntityType: group
@@ -24,6 +27,19 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_logo:
+    type: entity_browser_file
+    weight: 5
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_official_title:
     weight: 1
     settings:
