--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -4,10 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.group.program.field_audience
+    - field.field.group.program.field_logo
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
+  module:
+    - image
 id: group.program.default
 targetEntityType: group
 bundle: program
@@ -20,6 +23,15 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_logo:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_summary:
     weight: 1
