--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -4,12 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.group.program.field_audience
+    - field.field.group.program.field_logo
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
+    - image.style.thumbnail
   module:
     - chosen_field
+    - image
     - maxlength
 id: group.program.default
 targetEntityType: group
@@ -22,6 +25,19 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_logo:
+    type: entity_browser_file
+    weight: 5
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_shortname_or_acronym:
     weight: 1
     settings:
