--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -4,10 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.group.elected_official.field_bureaus
+    - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
+  module:
+    - image
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
@@ -20,6 +23,15 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_logo:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_official_title:
     weight: 1
