POWR-238 Removed again config files from vendor dir, added script to composer.json to create symlink on install as well as update

--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,10 @@
     },
     "scripts": {
         "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+        "post-install-cmd": [
+            "rmdir ./vendor/simplesamlphp/simplesamlphp/config",
+            "ln -s ../../../web/private/simplesamlphp/config ./vendor/simplesamlphp/simplesamlphp"
+        ],
         "post-update-cmd": [
             "rmdir ./vendor/simplesamlphp/simplesamlphp/config",
             "ln -s ../../../web/private/simplesamlphp/config ./vendor/simplesamlphp/simplesamlphp"
