POWR-233 Changed logo widget to default image widget Found the entity browser this defaulted to to be confusing

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -27,16 +27,11 @@ content:
     type: chosen_select
     region: content
   field_logo:
-    type: entity_browser_file
+    type: image_image
     weight: 6
     settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
       preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
+      progress_indicator: throbber
     region: content
     third_party_settings: {  }
   field_official_organization_name:
