--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -28,16 +28,11 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_logo:
-    type: entity_browser_file
+    type: image_image
     weight: 5
     settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
       preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
+      progress_indicator: throbber
     region: content
     third_party_settings: {  }
   field_official_title:
