POWR-238 Re-added post update and install scripts to composer.json to create symlink to config, fixed name of private folder with configs.

--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,15 @@
         "sort-packages": true
     },
     "scripts": {
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+        "post-install-cmd": [
+            "rm -rf ./vendor/simplesamlphp/simplesamlphp/config",
+            "ln -s ../../../web/private/simplesamlphp/config  ./vendor/simplesamlphp/simplesamlphp/config"
+        ],
+        "post-update-cmd": [
+            "rm -rf ./vendor/simplesamlphp/simplesamlphp/config",
+            "ln -s ../../../web/private/simplesamlphp/config  ./vendor/simplesamlphp/simplesamlphp/config"
+        ]
     },
     "extra": {
         "_readme": [
