POWR-233 Add a theme region for the eventual banner

--- a/web/themes/custom/stormy/stormy.info.yml
+++ b/web/themes/custom/stormy/stormy.info.yml
@@ -14,6 +14,7 @@ regions:
   header: Header
   header_form: "Header Form"
   primary_menu: 'Primary menu'
+  banner_top: 'Top banner'
   highlighted: Highlighted
   breadcrumb: Breadcrumb
   content: Content
