POWR-238c ran composer update, attempting to fix updb issue in circleci build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ behat_tests: &behat_tests
             # Wake up the DEV site and must wait for 30s
             terminus env:wake portlandor.dev && sleep 120s
             terminus remote:drush portlandor.dev -- cim -y
-            terminus remote:drush portlandor.dev -- updb
+            terminus remote:drush portlandor.dev -- -y updb
             terminus remote:drush portlandor.dev -- cr
             # echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.dev -- php-script)
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
@@ -158,7 +158,7 @@ behat_tests: &behat_tests
             fi
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- updb
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # echo 'node_access_rebuild();' | $(terminus drush portlandor.$CIRCLE_BRANCH -- php-script)
           fi
