POWR-88 Add time_field module and Event content type.

--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "drupal/swiftype": "^1.0",
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
+        "drupal/time_field": "^1.1",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_bulk_operations": "^2.2",
