--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -29,6 +29,7 @@ field_settings:
           information: default
           guide: default
           alert: default
+          event: default
   label:
     label: Label
     property_path: aggregated_field
