--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -358,6 +358,7 @@ display:
           required: true
           group_content_plugins:
             'group_node:city_service': 'group_node:city_service'
+            'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:news': 'group_node:news'
             'group_node:building': '0'
@@ -386,6 +387,7 @@ display:
           required: true
           group_content_plugins:
             'group_node:city_service': 'group_node:city_service'
+            'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:news': 'group_node:news'
             'group_node:building': '0'
@@ -404,6 +406,7 @@ display:
           required: true
           group_content_plugins:
             'group_node:city_service': 'group_node:city_service'
+            'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:news': 'group_node:news'
             'group_node:building': '0'
