--- a/web/sites/default/config/views.view.group_menu.yml
+++ b/web/sites/default/config/views.view.group_menu.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.group.field_shortname_or_acronym
     - node.type.city_service
+    - node.type.event
     - node.type.guide
     - node.type.news
   module:
@@ -361,6 +362,7 @@ display:
           admin_label: ''
           operator: in
           value:
+            event: event
             guide: guide
             news: news
             city_service: city_service
