--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -84,6 +84,7 @@ display:
               news: default
               guide: default
               alert: default
+              event: default
       fields:
         rendered:
           table: search_api_index_content
