--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -113,6 +113,7 @@ module:
   telephone_validation: 0
   text: 0
   textarea_widget_for_text: 0
+  time_field: 0
   token: 0
   toolbar: 0
   twig_tweak: 0
